<resources>
    <string name="app_name">CriminalIntent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>

    <string name="date_picker_title">Date of crime:</string>
    <string name="menu_add_crime">Add Crime</string>
    <string name="menu_item_clear">Clear</string>
    <string name="menu_item_show_subtitle">Show Subtitle</string>
    <string name="menu_item_hide_subtitle">Hide Subtitle</string>
    <string name="remove">remove</string>
    <string name="add_crime">ADD CRIME</string>
    <string name="item_delete_crime">Item</string>
    <string name="selectall">SelectAll</string>
    <string name="unselectall">UnSelectAll</string>
</resources>