<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_subtitle"
        android:title="@string/menu_item_show_subtitle"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_add_crime"
        android:icon="@drawable/ic_plus_circle_light"
        android:title="@string/menu_add_crime"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete_crime"
        android:icon="@drawable/ic_delet_item"
        android:title="@string/item_delete_crime"
        app:showAsAction="always" />
    <item
        android:id="@+id/select_all"
        android:title="@string/selectall" />
    <item
        android:id="@+id/unSelect_all"
        android:title="@string/unselectall" />
</menu>